# tree-sitter-frostlang

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pnpm-lock.yaml  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-frostlang.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_frostlang/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterFrostLang/: frostlang.h
bindings/swift/TreeSitterFrostLangTests/: TreeSitterFrostLangTests.swift
examples/: test.ff
src/: grammar.json  node-types.json  parser.c
test/corpus/: comments.txt  functions.txt  loops.txt  types.txt  variables.txt
